force-app/main/default/objects/TokenContract__c/TokenContract__c.object-meta.xml
<CustomObject>
    <description>Stores the address on the blockchain that issues the token. This is used to verify asset transfers. The API name of TokenContract is to remain code-compatible with the EVM Salesforce Applications.</description>
    <label>Token Issuer</label>
    <nameField>
        <label>Token Issuer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Token Issuers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>