force-app/main/default/objects/TokenContract__c/fields/AssetToken__c.field-meta.xml
<CustomField>
    <fullName>AssetToken__c</fullName>
    <description>The token that this contract defines. The contract is specific to the underlying network. While economically, all of the tokens should be roughly the same, they are technically referenced on each blockchain with an underlying contract.</description>
    <label>Token</label>
    <referenceTo>Asset_Token__c</referenceTo>
    <relationshipName>Token_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>