force-app/main/default/objects/TokenContract__c/fields/Contract_Address__c.field-meta.xml
<CustomField>
    <fullName>Contract_Address__c</fullName>
    <description>This is the address for the contract. It is specific for each Network. Field Name remains code-compatible with EVM based Salesforce Application.</description>
    <label>Issuer Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>