force-app/main/default/objects/TokenContract__c/fields/Contract_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Detail__c</fullName>
    <description>URL to view the Contract on the Block Explorer or similar. Field Name remains code-compatible with EVM based Salesforce Application.</description>
    <label>Issuer Detail</label>
    <type>Url</type>
</CustomField>