force-app/main/default/objects/TokenContract__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <description>XRP Ledger Address for issuing the the Token/Currency.</description>
    <label>Issuer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>