force-app/main/default/objects/TokenContract__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>The Network that this contract defines. This is used to validate transactions.</description>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blockchains</valueSetName>
    </valueSet>
</CustomField>